--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,13 @@
 h1 {
-    color: #34363c;
+    border: 2px dashed red;
     background: black;
 }
 div {
     background-color: white;
     max-width: 1200px;
+}
+
+p {
+    text-align: justify;
+    font-size: 20px;
 }
